--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,11 +1,11 @@
 karl package Changelog
 ======================
 
-Unreleased
-----------
+3.49.1 (2010-11-11)
+-------------------
 
-- Disable the "Remember me" checkbox on the login form while pending
-  resolution of LP #674123.
+- Disable the "Remember me" checkbox on the login form pending resolution
+  of LP #674123.
 
 
 3.49 (2010-11-02)
