--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 karl package Changelog
 ======================
 
+After 3.53
+----------
+
+- Implemented " Distribution lists on organizational reports" blueprint;  see:
+  https://blueprints.launchpad.net/karl3/+spec/distribution-list-organizational
+
+  Merge from 'tseaver-distribution_lists' branch.
+
 3.53 (2010-12-20)
 -----------------
 
