--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ karl package Changelog
 Unreleased
 -----------
 
+- Get rid of some deprecation warnings under Python 2.6.
+
 3.54 (2011-01-19)
 -----------------
 
