--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,8 @@ Unreleased
 - In mailin, multiple recipients are now allowed for single messages.
   (LP #773426)
 
+- Error monitor now shows referer for Karl exceptions.
+
 3.56 (2011-04-28)
 -----------------
 
