--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,9 @@ Unreleased
 - Pagination is now reset when clicking on a facet in the search results page.
   (LP #785360)
 
+- When waiting for livesearch results and a user hits enter, don't display an
+  error message.
+
 3.59 (2011-05-19)
 -----------------
 
