--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,12 @@ Unreleased
   in order to work around broken web browsers that send request strings in
   character encodings other than UTF-8. (LP #788234)
 
+- Fixed spellcheck for Karl instances not rooted at '/'.
+
+- Added error logging for OSErrors encountered when trying to run spellcheck.
+  (LP #794279)
+
+
 3.63 (2011-06-03)
 -----------------
 
