Improved thread safety of LRU cache implementation. Had not previously taken   into account havoc a clear() could play on reads.  (LP #791177)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,6 +19,9 @@ Unreleased
 - Added error logging for OSErrors encountered when trying to run spellcheck.
   (LP #794279)
 
+- Improved thread safety of LRU cache implementation. Had not previously taken
+  into account havoc a clear() could play on reads.  (LP #791177)
+
 - Workaround for slow script execution on ie in files tool
   (LP #792544)
 
