Fixed LP #897435: File content needed to be reindexed on version revert.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Unreleased
 
 - Fixed LP #891278: Some links to the wiki trash were incorrect.
 
+- Fixed LP #897435: File content needed to be reindexed on revert.
+
 3.75 (2011-12-07)
 -----------------
 
