Fix bug in show_file_view where unicode filename could cause an error.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,7 @@ karl package Changelog
 Unreleased
 ----------
 
+- Fixed bug in show file view where unicode filenames could cause an error.
 
 
 3.76 (2011-12-15)
