--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ karl package Changelog
 Unreleased
 ----------
 
-
+- Fixed lp:920668: more efficient trash UI for deep file hierarchies.
 
 3.80 (2012-01-04)
 -----------------
