lp:897428 - Added "Delete Permanently" option. Requires repozitory 1.2.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,9 @@ Unreleased
 
 - Fixed lp:920668: more efficient trash UI for deep file hierarchies.
 
+- Implemented lp:897428: allow community moderators to delete files
+  and wiki pages permanently.
+
 3.80 (2012-01-04)
 -----------------
 
