--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,11 @@
 karl package Changelog
 ======================
 
-Unreleased
-----------
+3.83 (2012-04-19)
+-----------------
 
-
+- Major work on new user interface.  Work in progress now available for use by
+  KarlAdmin and other invited users.
 
 3.82 (2012-02-28)
 -----------------
