--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ Unreleased
 ----------
 
 - Profile owners can now deactivate their own profiles.
+- Ux2 template for deactivation.
 
 3.89 (2012-06-26)
 -----------------
