--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ karl package Changelog
 Unreleased
 -----------
 
-- remove duplicate alpha added subscriber which caused community letter nav to show invalid letters.
+- remove duplicate alpha added subscriber which caused community letter nav to
+  show invalid letters.
 
 3.89 (2012-06-26)
 -----------------
